[gd_scene load_steps=7 format=3 uid="uid://bmji7qiha54yt"]

[ext_resource type="Script" path="res://scripts/in_game_ui.gd" id="1_6oo2d"]
[ext_resource type="FontFile" uid="uid://c6ibhdq20lcf6" path="res://assets/kenney/Kenney UI Pack/Font/Kenney Future Narrow.ttf" id="2_gwt47"]
[ext_resource type="FontFile" uid="uid://d1ws4y7ja2xhc" path="res://assets/kenney/Kenney UI Pack/Font/Kenney Future.ttf" id="2_i3met"]
[ext_resource type="Texture2D" uid="uid://brv8tsvdoroi1" path="res://assets/kenney/Previews/vending-machine.png" id="4_mra8s"]

[sub_resource type="LabelSettings" id="LabelSettings_s8vig"]
font = ExtResource("2_i3met")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_qej02"]
font = ExtResource("2_gwt47")
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[node name="inGameUI" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6oo2d")
ProfilePicture = ExtResource("4_mra8s")

[node name="popupDialogE" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="popupDialogE"]
layout_mode = 2
color = Color(0, 0, 0, 0.698039)

[node name="VBoxContainer" type="VBoxContainer" parent="popupDialogE"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="baseMenuScreen" type="MarginContainer" parent="popupDialogE/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="ColorRect" parent="popupDialogE/VBoxContainer/baseMenuScreen"]
custom_minimum_size = Vector2(700, 250)
layout_mode = 2
color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="InfoText" type="MarginContainer" parent="popupDialogE/VBoxContainer/baseMenuScreen/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 245.0
offset_top = 74.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainText" type="Label" parent="popupDialogE/VBoxContainer/baseMenuScreen/NinePatchRect/InfoText"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
text = "You Hungry?"
label_settings = SubResource("LabelSettings_s8vig")
vertical_alignment = 1
autowrap_mode = 2

[node name="Name" type="MarginContainer" parent="popupDialogE/VBoxContainer/baseMenuScreen/NinePatchRect"]
layout_mode = 0
offset_left = 245.0
offset_top = 175.0
offset_right = 492.0
offset_bottom = 215.0

[node name="ColorRect" type="ColorRect" parent="popupDialogE/VBoxContainer/baseMenuScreen/NinePatchRect/Name"]
layout_mode = 2
color = Color(0.164706, 0.152941, 0.145098, 1)

[node name="NameText" type="Label" parent="popupDialogE/VBoxContainer/baseMenuScreen/NinePatchRect/Name/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -9.0
offset_right = 61.5
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
text = "Snack Hack"
label_settings = SubResource("LabelSettings_qej02")

[node name="Container" type="MarginContainer" parent="popupDialogE/VBoxContainer/baseMenuScreen/NinePatchRect"]
layout_mode = 2
offset_left = 470.0
offset_top = 250.0
offset_right = 695.0
offset_bottom = 273.0

[node name="Label" type="Label" parent="popupDialogE/VBoxContainer/baseMenuScreen/NinePatchRect/Container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Escape:  ESC"

[node name="Profile" type="TextureRect" parent="popupDialogE/VBoxContainer/baseMenuScreen"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("4_mra8s")
expand_mode = 2
stretch_mode = 5
